index.html fixed alignment

--- a/scss/enter_form.css
+++ b/scss/enter_form.css
@@ -1,7 +1,8 @@
 .enter_form {
   float: right;
   width: 40%;
-  height: 100vh;
+  min-width: 300px;
+  max-height: 100vh;
   text-align: center;
   line-height: 100vh;
   background-color: #3b5998;
