--- a/scss/scaffolding.scss
+++ b/scss/scaffolding.scss
@@ -4,7 +4,6 @@ body {
   font-size: 18px;
   line-height: 27px;
   font-family: Arial, sans-serif;
-  color: #f7f4f1;
   font-style: normal;
   margin: 0;
 }
