--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -2,7 +2,7 @@
   float: left;
   width: 60%;
   max-width: 60%;
-  height: 100vh;
+  max-height: 100vh;
   margin: 0;
   padding: 0;
   background-color: #00007b;
@@ -18,6 +18,7 @@
 
 .slider_slide {
   position: relative;
+  max-height: 100vh;
   overflow: hidden;
 }
 
